资源定制删除备课夹按钮

--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -50,71 +50,51 @@
 				</div>
 			</div>
 			<div class="prepare-gallery row">
-				<!--<span class="leftbtn icon-angle"><i class="icon-angle-left"></i></span>-->
 				<div class="list-all-item col-md-3">
 					<div class="item_inner">
 						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
 						<div class="list-all-title">动画：荷塘月色</div>
 						<div class="btnBox">
 							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
 						</div>
 					</div>
 				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
-						</div>
-					</div>
-				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
-						</div>
-					</div>
-				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
-						</div>
-					</div>
-				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
-						</div>
-					</div>
-				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-							<button class="btn btn-success">加入备课夹</button>
-						</div>
-					</div>
-				</div>
-				
-				<!--<span class="rightbtn icon-angle"><i class="icon-angle-right"></i></span>-->
 			</div>
-			
+		</div>
+		
+		<div class="prepare-all-list">
+			<div class="prepare-all-header">
+				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
+				<span class="subject">物理</span>
+				<div class="coms-pagination">
+					<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
+					<div class="page-go">
+						<span class="page-text">转到</span>
+						<input class="page-input" />
+						<span class="page-go-btn">Go</span>
+					</div>
+				</div>
+			</div>
+			<div class="prepare-gallery row">
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		
 		
