--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -62,8 +62,9 @@
     text-decoration: underline;
     font-size:18px ;
     line-height: 40px;
-    float: left;
+    float: right;
     cursor: pointer;
+    margin-right: 10px;
 }
 #customres-container .subject_box .list-all-title{
     font-size:@resNavFontSize ;
