--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -70,6 +70,11 @@
     font-size:@resNavFontSize ;
     margin:10px auto;
     width:91%;
+    cursor: pointer;
+}
+#customres-container .prepare-all-item-img
+{
+    cursor: pointer;
 }
 #customres-container .subject_box .list-all-item{
   
