--- a/src/less/header.less
+++ b/src/less/header.less
@@ -76,7 +76,7 @@
     background: #EC80AF;
     border-radius: 6px;
 }
-.main-nav li>a:visited,.main-nav li>a:hover,.main-nav li>a:focus{
+.main-nav li>a:hover{
     background: #EC80AF;
     border: 1px dashed #fff;
     border-radius: 6px;
