--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -20,13 +20,13 @@
 	<div class="main-nav nav-pills headroom" id="main-nav">
 		<div class="container">
 			<ul class="nav">
-				<li><a ui-sref="systemres" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('systemres')}">系统资源</a></li>
-				<li><a ui-sref="schoolres" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('schoolres')}">校本资源</a></li>
-				<li><a ui-sref="areares" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('areares')}">区本资源</a></li>
-				<li><a href="#" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('#')}">学生学习空间</a></li>
-				<li><a ui-sref="customres" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('customres')}">资源定制</a></li>
-				<li class="shopping-cart nav-custom"><a ui-sref="prepare" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('prepare')}"><img src="assets/img/shopcart.png"/>备课夹</a></li>
-				<li class="nav-custom"><a ui-sref="personalcenter" class="hvr-sweep-to-right" ng-class="{'onactive':isActive('personalcenter')}"><img src="assets/img/profile.png"/>个人中心</a></li>
+				<li><a ui-sref="systemres"ng-class="{'onactive':isActive('systemres')}">系统资源</a></li>
+				<li><a ui-sref="schoolres" ng-class="{'onactive':isActive('schoolres')}">校本资源</a></li>
+				<li><a ui-sref="areares"  ng-class="{'onactive':isActive('areares')}">区本资源</a></li>
+				<li><a href="#"  ng-class="{'onactive':isActive('#')}">学生学习空间</a></li>
+				<li><a ui-sref="customres" ng-class="{'onactive':isActive('customres')}">资源定制</a></li>
+				<li class="shopping-cart nav-custom"><a ui-sref="prepare"  ng-class="{'onactive':isActive('prepare')}"><img src="assets/img/shopcart.png"/>备课夹</a></li>
+				<li class="nav-custom"><a ui-sref="personalcenter" ng-class="{'onactive':isActive('personalcenter')}"><img src="assets/img/profile.png"/>个人中心</a></li>
 			</ul>
 		</div>
 	</div>
