--- a/src/less/search.less
+++ b/src/less/search.less
@@ -16,6 +16,11 @@
     overflow: hidden;
     
 }
+#search-container .noInfo
+{
+    text-align: center;
+    margin-top: 50px;
+}
 #search-container .search_tools_inner
 {
     width: 500px;
