--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -5,7 +5,7 @@
 			<span ng-repeat="navCur in currentNav" ng-class="links[$index]?'links':''"  ng-click="back($index,navCur.tfcode)">{{navCur.name}}<i class="icon-angle-right"></i></span>
 		</div>
 		<div class="nav_right">
-		  <span class="mulu">其他版本目录
+		  <span class="mulu" ng-show="otherShow">其他版本目录
 			<div class="popBox">
 				<ul>
 					<li ng-repeat="navs in navList" ng-class="VM.curNav[$index]?'selected':''" ng-click="selectNav($index)">
