--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -56,7 +56,7 @@
 	<a class="select-tips">全部</a>-->
 	<div class="res-filter">
 		<!--<label class="right-label">收起筛选</label>-->
-		<input class="res-search" type="search" placeholder="请输入搜索内容" ui-sref="search"/>
+		<input class="res-search" type="search" placeholder="请输入搜索内容"/>
 		<span class="res-search-btn" ui-sref="search">
 			<i class="icon-search"></i>	   
 		</span>
