下载实时跟新

--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -54,7 +54,7 @@
 					</span>
 					</span>
 					<span class="res-list-tools">
-					<label class="res-download" ng-click="resDownload(source.id,source.fromFlag)"><i class="icon-download-alt"></i>点击下载</label>
+					<label class="res-download" ng-click="resDownload(source.id,source.fromFlag,$index)"><i class="icon-download-alt"></i>点击下载</label>
 				</span>
 				</li>
 
