--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -235,16 +235,6 @@
     margin-left: 20px;
 }
 
-
-
-.upload-file-content{
-  min-height: 300px; 
-}
-.upload-modal-body{
-    width: 600px;
-    margin: 0 auto;
-    margin-top: 200px;
-}
 .person-thumb{
     max-width: 80px;
     max-height: 80px;
@@ -343,7 +333,10 @@
     border: none;
 }
 
-
+//备课统计
+.statistic-box {
+    padding: 15px 5px;
+}
 
 
 
