--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -6,6 +6,7 @@
 .upload-modal-body{
     width: 800px;
     min-height: 500px;
+    text-align: left
 }
 .upload-file-content{
     background: #fff;
@@ -17,4 +18,26 @@
 }
 .upload-file-content>div{
     min-height: 300px;
+}
+.upload-modal .edit-upload-res{
+    padding: 15px;
+}
+.upload-modal .edit-upload-res table{
+    width: 70%;
+}
+.upload-modal .res-info-list {
+    padding: 6px 30px;
+    padding-left: 100px;
+}
+.red-tip{
+    color: #DF3D6D;
+    font-size: 22px;
+    padding: 0 3px;
+}
+.upload-footer{
+    text-align: center;
+}
+.unifyType-title{
+    width: 16%;
+    float: left;
 }
