--- a/src/coms/personal-center/views/upload-modal.html
+++ b/src/coms/personal-center/views/upload-modal.html
@@ -28,28 +28,92 @@
 				<button class="btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="150MB">上传</button>
 			</div>
 			<div class="continue-upload"  ng-hide="firstUpload">
-				<div class=""> {{ progress }}</div>
+				<table class="table">
+                        <thead>
+                            <tr>
+                                <th width="50%">文件名</th>
+                                <th ng-show="uploader.isHTML5">大小 </th>
+                                <th ng-show="uploader.isHTML5">进度</th>
+                                <th>上传控制 </th>
+  
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- ngRepeat: item in uploader.queue -->
+                            <tr  class="ng-scope">
+                                <td><strong class="ng-binding">QQ截图20160412170850.png</strong></td>
+                                <td ng-show="uploader.isHTML5" nowrap="" class="ng-binding">0.02 MB</td>
+                                <td>
+                                    <div class="progress" style="margin-bottom: 0;">
+                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }" style="width: 0%;"></div>
+                                    </div>
+                                </td>
+                                <td class="text-center">
+                                    <span ng-show="item.isSuccess" style="display: none;"><i class="glyphicon glyphicon-ok"></i></span>
+                                    <span ng-show="item.isCancel" style="display: none;"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                                    <span ng-show="item.isError" style="display: none;"><i class="glyphicon glyphicon-remove"></i></span>
+                                </td>
+                                <td nowrap="">
+                                    <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                                        <span class="glyphicon glyphicon-upload"></span> 上传
+                                    </button>
+                                    <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading" disabled="disabled">
+                                        <span class="glyphicon glyphicon-ban-circle"></span> 取消
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+                                        <span class="glyphicon glyphicon-trash"></span> 清除
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    
 				<!--<button class="btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="150MB">继续添加</button>-->
 				<button class="btn-general" ng-click="uploadResInfo()">完成</button>
 			</div>
 		</div>
 	</div>
 </script>
+
+
+
 <!-- 上传资源信息编辑 -->
 <script type="text/ng-template" id="eiditResModal.html">
-	<div class="modal-body upload-modal-body modal-prepare-body">
+	<div class="modal-body modal-prepare-body upload-modal-body">
 		<div class="modal-prepare-header">上传资源</div>
-		<div class="modal-prepare-content">
-			资源名称：<input id="resName" ng-model="VM.resName" />
-			<img src="http://i3.piimg.com/0fe5749e7490ca57.png" style="width:100%">
-			<!--<div class="">资源类型：</div>
-			<div class="">上传至：</div>
-			<div class="">共享范围：</div>
-			<div class="">关键词：</div>
-			<div class="">资源介绍：</div>
-			<div class="">{{VM.resSize}}</div>-->
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="uploadResInfo()">确定</button>
-			<button class="btn btn-lg btn-success btn-custom-modal">取消</button>
+		<div class="edit-upload-res">
+			<div class="row">
+				<div class="col-sm-2">上传资源列表</div>
+				<table class="col-sm-9 table table-striped table-hover table-bordered">
+					<tr>
+						<td>序号</td>
+						<td>资源名称</td>
+					</tr>
+					<tr>
+						<td>01</td>
+						<td>sdfsdaf.jpg</td>
+					</tr>
+				</table>
+			</div>
+			<div class="res-info-list">
+				<div class=""><span class="red-tip">*</span>资源名称：<input id="resName" ng-model="VM.resName" /></div>
+				<div class="">
+					<div class="unifyType-title"><span class="red-tip">*</span>资源类型：</div>
+					<span class="unifyType" ng-repeat="v in unifyType"> {{v.mtype}} </span>
+				</div>
+				<div class=""><span class="red-tip">*</span>上传至：</div>
+				<div class=""><span class="red-tip">*</span>共享范围：</div>
+				<div class=""><span class="red-tip">*</span>关键词：</div>
+				<div class=""><span class="red-tip">*</span>资源介绍：
+					<textarea>
+						
+					</textarea>
+				</div>
+			</div>
+			<div class="upload-footer">
+				<button class="btn btn-lg btn-success btn-custom-modal" ng-click="uploadResInfo()">确定</button>
+				<button class="btn btn-lg btn-success btn-custom-modal">取消</button>
+			</div>
 		</div>
 	</div>
 </script>
