--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -43,7 +43,7 @@
 #preview-container .header-nav-tips .nav_left
 {
     float: left;
-    width: 65%;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -55,51 +55,51 @@
     cursor: pointer;
     font-weight: bold;
 }
-#preview-container .mulu
-{
-    cursor: pointer;
-    position: relative;
-}
+//#preview-container .mulu
+//{
+//  cursor: pointer;
+//  position: relative;
+//}
 
-#preview-container .mulu .popBox
-{
-   
-    width: 300px;
-    border: 2px solid @color5;
-    background: @color6;
-    position: absolute;
-    z-index: 20;
-    left: -200px;
-    top:20px;
-    color: @color12;
-    padding: 10px;
-    box-shadow: 0px 0px 5px @color5;
-    display: none;
-    max-height: 630px;
-    overflow-y: auto;
-}
-#preview-container .mulu:hover{
-    text-decoration: underline;
-}
-#preview-container .mulu:hover .popBox
-{
-    display: block;
-}
-#preview-container .popBox ul{
-    padding-left: 0px;
-}
-#preview-container .popBox li{
-    margin-bottom: 20px;
-}
+//#preview-container .mulu .popBox
+//{
+// 
+//  width: 300px;
+//  border: 2px solid @color5;
+//  background: @color6;
+//  position: absolute;
+//  z-index: 20;
+//  left: -200px;
+//  top:20px;
+//  color: @color12;
+//  padding: 10px;
+//  box-shadow: 0px 0px 5px @color5;
+//  display: none;
+//  max-height: 630px;
+//  overflow-y: auto;
+//}
+//#preview-container .mulu:hover{
+//  text-decoration: underline;
+//}
+//#preview-container .mulu:hover .popBox
+//{
+//  display: block;
+//}
+//#preview-container .popBox ul{
+//  padding-left: 0px;
+//}
+//#preview-container .popBox li{
+//  margin-bottom: 20px;
+//}
 #preview-container .selected{
     color: @color1;
 }
-#preview-container .header-nav-tips .nav_right
-{
-    float: right;
-    width: 30%;
-    margin-left: 5%;
-}
+//#preview-container .header-nav-tips .nav_right
+//{
+//  float: right;
+//  width: 30%;
+//  margin-left: 5%;
+//}
 .preview-content{
     background: #fff;
     padding: 15px;
