--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -27,7 +27,7 @@
 				<input id="{{$index}}" class="res-checkbox" checklist-model="resList.select" checklist-value="list.id" type="checkbox" ng-click="addItemSelect(list.id)" />
 				<label for="{{$index}}"></label>
 				<img ng-show="list.new" class="is-new-list" src="assets/img/new.png" />
-				<div class="img-thumb-list">
+				<div class="img-thumb-list img-thumb-list-res">
 					<img class="prepare-shop res-list-thumb" ng-src="{{list.thumbnailpath?list.thumbnailpath:'null'}}" fallback-src="assets/img/sample.png" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 				</div>
 				<span class="res-list-info" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
