--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -343,3 +343,12 @@
     color: #DFA515;
     cursor: pointer;
 }
+
+
+#preview-container .loading
+{
+    position: fixed;
+    left: 42%;
+    top:25%;
+    z-index: 30;
+}
