--- a/src/less/search.less
+++ b/src/less/search.less
@@ -75,7 +75,7 @@
 {
     overflow: hidden;
     clear: both;
-    margin-left: 30px;
+//  margin-left: 30px;
     color: @color12;
     text-align: center;
     
@@ -121,14 +121,17 @@
     margin: 0px;
     padding: 15px 0px;
     cursor: default !important;
+    min-height: 168px;
   
 }
-#search-container .res-list-thumb{
-    border: 2px solid #219B81;
-    height: 130px;
-    width: 165px;
+#search-container .img-thumb-list
+{
+    height: 140px;
+    width: 140px;
     cursor: pointer;
+   
 }
+
 #search-container .res-checkbox
 {
     top:60px;
