--- a/src/coms/personal-center/views/upload-modal.html
+++ b/src/coms/personal-center/views/upload-modal.html
@@ -32,9 +32,9 @@
                         <thead>
                             <tr>
                                 <th width="50%">文件名</th>
-                                <th ng-show="uploader.isHTML5">大小 </th>
-                                <th ng-show="uploader.isHTML5">进度</th>
-                                <th>上传控制 </th>
+                                <th> </th>
+                                <th>进度</th>
+                                <th style="text-align: center;">上传控制 </th>
   
                             </tr>
                         </thead>
