--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -65,7 +65,7 @@
 					<label class="res-type">类型: {{ list.mtype }}</label>
 					
 					<label class="res-size">
-						<res-size data-value="{{list.fsize}}"></res-size>
+						<res-size2 data-value="{{list.fsize}}"></res-size2>
 					</label><br>
 					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
 					
