--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -63,10 +63,22 @@
     color: #219B81;
     border: 1px solid #CCCCCC;
 }
-
+.cen-right-up i{
+    color: #808080;
+    font-size: 30px;
+}
+.cen-right-up i:hover{
+    color: #219B81;
+    transform: scale(1.3);
+    transition:  0.5s transform;
+    -moz-transition: 0.5s transform; /* Firefox 4 */
+    -webkit-transition: 0.5s transform; /* Safari 和 Chrome */
+    -o-transition: 0.5s transform; /* Opera */
+}
 .cen-right-up, .cen-right-down {
     background: #FFFFFF;
     position: relative;
+    padding-bottom: 20px;
 }
 
 .cen-right h3 {
@@ -85,6 +97,7 @@
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
+    padding-top: 35px;
 }
 
 .left-arrow span {
@@ -111,6 +124,7 @@
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
+    padding-top: 35px;
 }
 
 .right-arrow span {
@@ -337,6 +351,8 @@
 .statistic-box {
     padding: 15px 5px;
 }
-
+.statistic-box div[data-highcharts-chart] .highcharts-container{
+    margin: 0 auto;
+}
 
 
