--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -15,13 +15,13 @@
 						<button class="btn-general btn-pink" ng-click="VM.uploadResInfo()">编辑资源</button>
 					</div>
 				</div>
-				<div class="btn-group">
+				<div class="op-btn-group">
 					<ul>
-						<li><button class="btn-general btn-heavy" ng-click="switchItem(0)">我的备课</button></li>
-						<li><button class="btn-general btn-light" ng-click="switchItem(1)">我的上传</button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(2)">我的下载</button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(3)">我的评论</button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(4)">最近浏览</button></li>
+						<li><button class="btn-general" ng-click="switchItem(0)" op-btn="我的备课"></button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(1)" op-btn="我的上传"></button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(2)" op-btn="我的下载"></button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(3)" op-btn="我的评论"></button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(4)" op-btn="最近浏览"></button></li>
 					</ul>
 				</div>
 			</div>
