--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -324,6 +324,13 @@
     background: url(assets/img/prepare/edit_icon.png);
 }
 
+.sp-edit:hover {
+    .popover {
+        display: block;
+        left: 80%;
+    }
+}
+
 //弹出提示
 .popover {
     display: none;
@@ -334,6 +341,7 @@
     border: 2px solid #219b81;
     border-bottom: none;
     color: #219b81;
+    padding: 0;
 }
 
 .popover ul {
