--- a/src/coms/personal-center/views/my-prepare.html
+++ b/src/coms/personal-center/views/my-prepare.html
@@ -25,7 +25,7 @@
 				<!-- <li class="active"> -->
 					<div class="col-md-7 col-sm-7">
 						<img ng-src="{{res.imgPath}}" />
-						<span class="resource-title" ng-bind="res.title"></span>
+						<span class="resource-title" ng-bind="res.title" title="{{res.title}}"></span>
 					</div>
 					<div class="col-md-2 col-sm-2">
 						<span class="resource-type" ng-bind="res.unifyType"></span>
@@ -36,13 +36,17 @@
 				</li>
 			</ul>
 		</div>
+		<div class="set-per-page">
+			<span class="res-text-total"><i>共</i><i>{{bigTotalItems}}条，</span>
+				<span class="res-text-perpage"> 每页显示<input type="text" ng-model="VM.perPage" ng-blur="changPerPage()"/>条</span>
+		</div>
 		<div class="pagination-box">
 			<div class="coms-pagination">
-			 	<uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+			 	<uib-pagination total-items="totalItems"  ng-model="VM.currentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
-					<input class="page-input"/>
-					<span class="page-go-btn">Go</span>
+					<input class="page-input" ng-model="pageTo"/>
+					<span class="page-go-btn" ng-click="pageChanged(pageTo)">Go</span>
 				</div>
 			</div>
 		</div>
