--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -35,28 +35,34 @@
     line-height: 35px;
 }
 
-.btn-group {
+.op-op-btn-group {
     background-color: #FFFFFF;
     padding: 10px 10px;
     width: 100%;
 }
 
-.btn-group ul {
+.op-btn-group ul {
     width: 100%;
     padding: 0;
     text-align: center;
 }
 
-.btn-group ul button {
+.op-btn-group ul button {
     width: 100%;
     height: 50px;
     font-size: 2rem;
     letter-spacing: 2px;
 }
 
-.btn-light {
+.op-btn-group ul button:hover {
     background-color: #41C9A9;
+    color: #FFFFFF;
 }
+
+.op-btn-group ul button:active {
+    
+}
+
 
 .btn-white {
     background-color: #FFFFFF;
@@ -241,6 +247,13 @@
 }
 
 //编辑资源模态框
+
+@media screen and (min-width: 992px) {
+    .modal-slg {
+        width: 800px;
+    }
+}
+
 .edit-res-modal {
     background-color: #FFFFFF;
     font-size: 1.3rem;
@@ -248,7 +261,7 @@
     border-radius: 7px;
     color: #666666;
     text-align: center;
-    width: 700px;
+    width: 110%;
     vertical-align: top;
 }
 
@@ -263,7 +276,7 @@
 }
 
 .edit-res-modal .modal-body {
-    width: 70%;
+    width: 80%;
     text-align: left;
     margin: auto;
 }
@@ -290,6 +303,34 @@
 
 .edit-list {
     padding: 15px 10px;
+}
+
+.edit-list-left {
+    width: 12%;
+    float: left;
+}
+
+.edit-list-right {
+    width: 80%;
+    float: left;
+
+    .menu-drop .trigger {
+        margin-top: 0;
+        height: 20px;
+        line-height: 20px;
+        margin-right: -1px;
+        padding-right: 0;
+        border: 1px solid #CCCCCC;
+    }
+
+    .menu-drop .trigger i {
+        margin-right: 0;
+        padding-right: 0;
+    }
+
+    .menu-drop .menu-drop-main {
+        width: 95%;
+    }
 }
 
 .sp-label {
