--- a/src/less/header.less
+++ b/src/less/header.less
@@ -65,18 +65,18 @@
 #header .main-nav li:first-child{
     margin-left: 0;
 }
-.main-nav li>a{
+.main-nav li>span{
     color:#fff;
     font-size: 18px;
     padding: 0;
-    line-height: 36px;
-    padding: 3px 6px;
+    line-height: 46px;
+    padding: 6px 10px;
 }
 #header .main-nav li:hover{
     background: #EC80AF;
     border-radius: 6px;
 }
-.main-nav li>a:hover{
+.main-nav li>span:hover{
     background: #EC80AF;
     border: 1px dashed #fff;
     border-radius: 6px;
